--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="container">
-      <h1 class="text-center">Movies catalog</h1>
+      <h1 class="text-center text-light my-5 py-5">Movies catalog</h1>
 
       <div class="row">
-        <div class="col-lg-5 col-md-12 col-sm-12">
-          <form>
-            <div class="mb-3">
+        <div class="col-12">
+          <form class="form d-flex">
+            <!-- <div class="mb-3">
               <input
                 type="email"
                 class="form-control"
@@ -23,27 +23,24 @@
                 aria-describedby="emailHelp"
                 placeholder="ave"
               />
-            </div>
-            <div class="mb-3">
+            </div> -->
+            <!-- <div class="mb-3">
               <input
                 type="password"
                 class="form-control"
                 id="exampleInputPassword1"
                 placeholder="5"
               />
-            </div>
+            </div> -->
 
             <select
-              class="form-select mb-3"
+              class="form-select w-50 mb-3"
               aria-label="Default select example"
             >
-              <option selected>all</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option selected value="All">All</option>
             </select>
 
-            <select
+            <!-- <select
               class="form-select mb-3"
               aria-label="Default select example"
             >
@@ -51,13 +48,13 @@
               <option value="1">One</option>
               <option value="2">Two</option>
               <option value="3">Three</option>
-            </select>
+            </select> -->
 
-            <button class="btn btn-primary w-100 mb-3">search</button>
+            <button class="btn btn-primary w-50 mb-3">search</button>
 
-            <h1>Bookmarked movies</h1>
+            <!-- <h1>Bookmarked movies</h1> -->
 
-            <ul class="list-group">
+            <!-- <ul class="list-group">
               <li class="list-group-item d-flex flex-column">
                 An item
 
@@ -71,19 +68,21 @@
                 A third item
                 <button class="btn btn-danger mt-3 w-25">Remove</button>
               </li>
-            </ul>
+            </ul> -->
           </form>
         </div>
 
-        <div class="col-lg-7 col-md-12 col-sm-12">
-          <h5 class="text-secondary">
+        <div class="col-12">
+          <h5 class="text-secondary my-3">
             Search results: <span class="movies__result">0</span>
           </h5>
 
-          <div class="alert alert-primary mb-3" role="alert">
+          <!-- <div class="alert alert-primary mb-3" role="alert">
             A simple primary alert—check it out!
-          </div>
-          <ul class="movies__list"></ul>
+          </div> -->
+          <ul class="movies__list list-unstyled d-flex justify-content-between flex-wrap mx-auto">
+
+          </ul>
         
         </div>
       </div>
