--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="bg-dark">
     <div class="container">
-      <h1 class="text-center text-light my-5 py-5">Movies catalog</h1>
+      <h1 class="text-center text-light my-5">Movies catalog</h1>
 
       <div class="row">
         <div class="col-12">
@@ -87,6 +87,21 @@
         </div>
       </div>
     </div>
+    <div class="modal">
+      <button class="close-modal">&times;</button>
+      <h1>I'm a modal window 😍</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
+    <div class="hidden checking"></div>
+
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./js/movies-new.js"></script>
