--- a/index.html
+++ b/index.html
@@ -6,102 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <title>Movies</title>
   </head>
   <body class="bg-dark">
     <div class="container">
-      <h1 class="text-center text-light my-5">Movies catalog</h1>
 
+      <h1 class="text-center text-light my-5">Movies catalog</h1>
       <div class="row">
-        <div class="col-12">
-          <form class="form d-flex">
-            <!-- <div class="mb-3">
+        <div class="col-5">
+          <form class="form">
+            <div class="mb-3 w-100">
               <input
-                type="email"
-                class="form-control"
+                type="text"
+                class="form-control w-100 bg-dark text-light"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
-                placeholder="ave"
+                placeholder="Search..."
               />
-            </div> -->
-            <!-- <div class="mb-3">
+            </div>
+            <div class="mb-3">
               <input
                 type="password"
-                class="form-control"
+                class="form-control bg-dark text-light"
                 id="exampleInputPassword1"
                 placeholder="5"
               />
-            </div> -->
+            </div>
 
             <select
-              class="form-select w-50 mb-3"
+              class="form-select bg-dark text-light w-100 mb-3"
               aria-label="Default select example"
             >
               <option selected value="All">All</option>
             </select>
 
-            <!-- <select
-              class="form-select mb-3"
+            <select
+              class="form-select bg-dark text-light mb-3"
               aria-label="Default select example"
             >
               <option selected>raiting (high to low)</option>
               <option value="1">One</option>
               <option value="2">Two</option>
               <option value="3">Three</option>
-            </select> -->
+            </select>
 
-            <button class="btn btn-primary w-50 mb-3">search</button>
+            <button class="btn btn-primary w-100 mb-3">search</button>
 
-            <!-- <h1>Bookmarked movies</h1> -->
+            <h1 class="text-light">Bookmarked movies</h1>
 
-            <!-- <ul class="list-group">
-              <li class="list-group-item d-flex flex-column">
-                An item
-
-                <button class="btn btn-danger mt-3 w-25">Remove</button>
-              </li>
-              <li class="list-group-item d-flex flex-column">
-                A second item
-                <button class="btn btn-danger mt-3 w-25">Remove</button>
-              </li>
-              <li class="list-group-item d-flex flex-column">
-                A third item
-                <button class="btn btn-danger mt-3 w-25">Remove</button>
-              </li>
-            </ul> -->
+            <ul class="list-group bookmark-list">
+            </ul>
           </form>
         </div>
 
-        <div class="col-12">
-          <h5 class="text-secondary my-3">
+        <div class="col-7">
+          <h5 class="text-secondary my-3 pb-4">
             Search results: <span class="movies__result">0</span>
           </h5>
 
-          <!-- <div class="alert alert-primary mb-3" role="alert">
-            A simple primary alert—check it out!
-          </div> -->
-          <ul class="movies__list list-unstyled d-flex justify-content-between flex-wrap mx-auto">
+          <ul class="movies__list list-unstyled d-flex justify-content-evenly flex-wrap">
 
           </ul>
         
-        </div>
+        </div>  
       </div>
-    </div>
-    <div class="modal">
-      <button class="close-modal">&times;</button>
-      <h1>I'm a modal window 😍</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
-    </div>
-    <div class="hidden checking"></div>
 
+      <div class="modall">
+        <button class="close-modal">&times;</button>
+        <h1 class="modal-title"></h1>
+        <p class="modal-desc">
+        </p>
+      </div>
+      <div class="overlayy"></div>
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./js/movies-new.js"></script>
