best of the best movies

--- a/index.html
+++ b/index.html
@@ -65,10 +65,17 @@
             <button class="close-modal">&times;</button>
             <h1 class="modal-title"></h1>
             <p class="modal-desc">
-
             </p>
         </div>
         <div class="hidden more-info-overlay"></div>
+
+        <div class="hidden modals modal-style">
+        </div>
+
+        <div class="hidden overlay">
+        </div>
+
+
 
         <script src="./js/movies-new.js"></script>
         <script src="./js/script.js"></script>
