--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         <div class="row">
             <div class="col-5">
                 <form class="form">
-                    <div class="mb-3 w-100">
+                    <!-- <div class="mb-3 w-100">
                         <input type="text" class="form-control w-100 bg-dark text-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Search..." />
                     </div>
                     <div class="mb-3">
                         <input type="password" class="form-control bg-dark text-light" id="exampleInputPassword1" placeholder="5" />
-                    </div>
+                    </div> -->
 
                     <select class="form-select bg-dark text-light w-100 mb-3" aria-label="Default select example">
                         <option selected value="All">All</option>
                     </select>
 
-                    <select class="form-select bg-dark text-light mb-3" aria-label="Default select example">
+                    <!-- <select class="form-select bg-dark text-light mb-3" aria-label="Default select example">
                         <option selected>raiting (high to low)</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
-                    </select>
+                    </select> -->
 
                     <button class="btn btn-primary w-100 mb-3">search</button>
 
@@ -72,7 +72,7 @@
         <div class="hidden modals modal-style">
         </div>
 
-        <div class="hidden overlay">
+        <div class="hidden overlay overlay-style">
         </div>
 
 
