--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/1407328704.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <title>Movies</title>
 </head>
 
-<body class="bg-dark">
+<body>
     <div class="container">
 
-        <h1 class="text-center text-light my-5">Movies catalog</h1>
+        <h1 class="text-center my-5">Movies catalog</h1>
+
         <div class="row">
             <div class="col-5">
                 <form class="form">
@@ -25,20 +27,19 @@
                         <input type="password" class="form-control bg-dark text-light" id="exampleInputPassword1" placeholder="5" />
                     </div> -->
 
-                    <select class="form-select bg-dark text-light w-100 mb-3" aria-label="Default select example">
+                    <select class="form-select w-100 mb-3" aria-label="Default select example">
                         <option selected value="All">All</option>
                     </select>
 
-                    <!-- <select class="form-select bg-dark text-light mb-3" aria-label="Default select example">
-                        <option selected>raiting (high to low)</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                    </select> -->
+                    <select class="form-select mb-3 select-high-low" aria-label="Default select example">
+                        <option value="high-low">raiting (high to low)</option>
+                        <option value="high">high</option>
+                        <option value="low">low</option>
+                    </select>
 
                     <button class="btn btn-primary w-100 mb-3">search</button>
 
-                    <h1 class="text-light">Bookmarked movies</h1>
+                    <h1>Bookmarked movies</h1>
 
                     <ul class="list-group bookmark-list">
                     </ul>
@@ -50,7 +51,7 @@
                     Search results: <span class="movies__result">0</span>
                 </h5>
 
-                <div class="alert mb-4 bg-dark border border-light text-light" role="alert">
+                <div class="alert alert-primary mb-4" role="alert">
                     Kinolar Bookmarkda saqlanadi :)
                 </div>
 
