--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     </select>
 
                     <select class="form-select mb-3 select-high-low" aria-label="Default select example">
-                        <option value="high-low">raiting (high to low)</option>
-                        <option value="high">high</option>
-                        <option value="low">low</option>
+                        <!-- <option value="high-low">raiting (high to low)</option> -->
+                        <option value="high">high to low</option>
+                        <option value="low">low to high</option>
                     </select>
 
                     <button class="btn btn-primary w-100 mb-3">search</button>
@@ -47,13 +47,9 @@
             </div>
 
             <div class="col-7">
-                <h5 class="text-secondary mb-3">
+                <h5 class="text-secondary mb-5">
                     Search results: <span class="movies__result">0</span>
                 </h5>
-
-                <div class="alert alert-primary mb-4" role="alert">
-                    Kinolar Bookmarkda saqlanadi :)
-                </div>
 
                 <ul class="movies__list mt-2 list-unstyled d-flex justify-content-evenly flex-wrap">
 
