--- a/index.html
+++ b/index.html
@@ -13,51 +13,63 @@
 </head>
 
 <body>
-    <div class="container">
 
-        <h1 class="text-center my-5">Movies catalog</h1>
-
-        <div class="row">
-            <div class="col-5">
-                <form class="form">
-                    <!-- <div class="mb-3 w-100">
-                        <input type="text" class="form-control w-100 bg-dark text-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Search..." />
-                    </div>
-                    <div class="mb-3">
-                        <input type="password" class="form-control bg-dark text-light" id="exampleInputPassword1" placeholder="5" />
-                    </div> -->
-
-                    <select class="form-select w-100 mb-3" aria-label="Default select example">
-                        <option selected value="All">All</option>
-                    </select>
-
-                    <select class="form-select mb-3 select-high-low" aria-label="Default select example">
-                        <!-- <option value="high-low">raiting (high to low)</option> -->
-                        <option value="high">high to low</option>
-                        <option value="low">low to high</option>
-                    </select>
-
-                    <button class="btn btn-primary w-100 mb-3">search</button>
-
-                    <h1>Bookmarked movies</h1>
-
-                    <ul class="list-group bookmark-list">
-                    </ul>
-                </form>
-            </div>
-
-            <div class="col-7">
-                <h5 class="text-secondary mb-5">
-                    Search results: <span class="movies__result">0</span>
-                </h5>
-
-                <ul class="movies__list mt-2 list-unstyled d-flex justify-content-evenly flex-wrap">
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+        <div class="container-fluid align-items-center py-3">
+            <a class="navbar-brand fs-3 fw-bold" href="#">FILMS <i class="bi bi-camera-reels mx-2 fs-3"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item mx-3">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected value="All">All</option>
+                        </select>
+                    </li>
+                    <li class="nav-item">
+                        <select class="form-select select-high-low" aria-label="Default select example">
+                            <option value="high-low">raiting (high to low)</option>
+                            <option value="high">high to low</option>
+                            <option value="low">low to high</option>
+                        </select>
+                    </li>
                 </ul>
 
+
+                <i class="bi bi-download mx-4 fs-2 save-btn"></i>
+
+
+                <form class="form d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </form>
             </div>
         </div>
+    </nav>
 
+    <div class="container">
+
+        <div class="list-modal">
+
+            <h1 class="text-center py-4">
+                Save Films
+            </h1>
+
+            <i class="bi bi-x-lg fs-1 p-5"></i>
+
+            <ul class="list-group bookmark-list">
+
+            </ul>
+        </div>
+
+        <h5 class="text-secondary my-3">
+            Search results: <span class="movies__result">0</span>
+        </h5>
+
+        <ul class="movies__list mx-auto list-unstyled d-flex justify-content-between flex-wrap">
+
+        </ul>
 
         <div class="hidden more-info-modal">
             <button class="close-modal">&times;</button>
@@ -74,7 +86,7 @@
         </div>
 
 
-
+        <script src="./bootstrap/bootstrap.bundle.min.js"></script>
         <script src="./js/movies-new.js"></script>
         <script src="./js/script.js"></script>
 
